[package]
name = "game"
version = "0.1.0"
authors = ["Eirik Tobiassen <eiriktob@stud.ntnu.no>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.6.0"
image = "0.23.12"
rand = "0.8.3"
dungeon_crawler_derive = { path = "./dungeon_crawler_derive" }