[package]
name = "game"
version = "0.1.0"
authors = ["Eirik Tobiassen <eirtob98@hotmailcom>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.7.0" }
bevy_ecs_tilemap = "0.6.0"
bevy_rapier2d = "0.14.1"
iyes_loopless = "0.6.0"
leafwing-input-manager = "0.4.0"
bevy_console = "0.3.1"
bevy-inspector-egui = "0.11.0"
bevy_easings = "0.7.0"

image = "0.23.12"
rand = "0.8.3"
strum = { version = "0.24", features = ["derive"] }

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# [profile.release]
# lto = "thin"